<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:meinTV="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/mainStartBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/shredding"
        android:gravity="center" >

        <ImageView
            android:layout_width="@dimen/main_activity_icon_size"
            android:layout_height="@dimen/main_activity_icon_size"
            android:alpha=".5"
            android:src="@drawable/icon_snowboard" />

        <com.gloomy.ShreddingRobot.Widget.MeinTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_padding"
            android:text="@string/shredding"
            android:textColor="@color/white"
            android:textSize="@dimen/main_page_font_size"
            android:shadowColor = "@color/white"
            android:shadowRadius = "@integer/text_glow_radius" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/historyBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/history"
        android:gravity="center" >

        <ImageView
            android:layout_width="@dimen/main_activity_icon_size"
            android:layout_height="@dimen/main_activity_icon_size"
            android:src="@drawable/icon_history"
            android:alpha=".5" />

        <com.gloomy.ShreddingRobot.Widget.MeinTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_padding"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="@dimen/main_page_font_size"
            android:shadowColor = "@color/white"
            android:shadowRadius = "@integer/text_glow_radius" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/settings"
        android:gravity="center" >

        <ImageView
            android:layout_width="@dimen/main_activity_icon_size"
            android:layout_height="@dimen/main_activity_icon_size"
            android:src="@drawable/icon_setting"
            android:alpha=".5" />

        <com.gloomy.ShreddingRobot.Widget.MeinTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_padding"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/main_page_font_size"
            android:shadowColor = "@color/white"
            android:shadowRadius = "@integer/text_glow_radius" />
    </LinearLayout>
</LinearLayout>