<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gauge="http://schemas.android.com/apk/res-auto"
    xmlns:meinTV="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:clipChildren="false"
    android:background="@color/grey"
    tools:context="com.gloomy.ShreddingRobot.TrackingActivity">

    <RelativeLayout
        android:id="@+id/speedGaugeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gauge_height"
        android:background="@color/transparent">

        <com.gloomy.ShreddingRobot.Widget.CustomGauge
            android:id="@+id/speedGauge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="0dp"
            android:paddingLeft="@dimen/gauge_padding"
            android:paddingRight="@dimen/gauge_padding"
            android:paddingTop="@dimen/gauge_padding"
            android:background="@color/transparent"
            gauge:useLapping="false"
            gauge:useShader="false"
            gauge:dualValue="true"
            gauge:pointSize="0"
            gauge:trackWidth="8dp"
            gauge:trackColor="@color/white"
            gauge:strokeCap="BUTT"
            gauge:strokeWidth="8dp"
            gauge:strokeColor1="@color/slateBlue"
            gauge:strokeColor2="@color/magenta"
            gauge:startAngle="135"
            gauge:startValue="0"
            gauge:sweepAngle="270"
            gauge:endValue="600" />

        <com.gloomy.ShreddingRobot.Widget.MeinTextView
            android:id="@+id/speedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/gaugeTV_bottom_margin"
            android:background="@color/transparent"
            android:gravity="center"
            android:textSize="28sp"
            android:visibility="visible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sensorReadingLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent">

        <LinearLayout
            android:id="@+id/sensorReadingLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.gloomy.ShreddingRobot.Widget.MeinTextView
                android:id="@+id/tv_trackLengthLabel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/sensorReading_height"
                android:layout_marginStart="@dimen/airTimeLabel_marginStart"
                android:gravity="center_vertical"
                android:text="@string/track_length_label"
                android:textColor="@color/white"
                android:textSize="@dimen/sensorReading_textSize" />

            <com.gloomy.ShreddingRobot.Widget.MeinTextView
                android:id="@+id/tv_trackLengthTimer"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sensorReading_height"
                android:layout_marginEnd="@dimen/airTime_marginEnd"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/sensorReading_textSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sensorReadingLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/sensorReadingLayout3">

            <com.gloomy.ShreddingRobot.Widget.MeinTextView
                android:id="@+id/tv_airTimeLabel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/sensorReading_height"
                android:layout_marginStart="@dimen/airTimeLabel_marginStart"
                android:gravity="center_vertical"
                android:text="@string/air_time_label"
                android:textColor="@color/white"
                android:textSize="@dimen/sensorReading_textSize" />

            <com.gloomy.ShreddingRobot.Widget.MeinTextView
                android:id="@+id/tv_airTimeTimer"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sensorReading_height"
                android:layout_marginEnd="@dimen/airTime_marginEnd"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/sensorReading_textSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sensorReadingLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/sensorReadingLayout1" >

            <com.gloomy.ShreddingRobot.Widget.MeinTextView
                android:id="@+id/tv_maxAirTimeLabel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/sensorReading_height"
                android:layout_marginStart="@dimen/airTimeLabel_marginStart"
                android:gravity="center_vertical"
                android:text="@string/max_air_time_label"
                android:textColor="@color/white"
                android:textSize="@dimen/sensorReading_textSize" />

            <com.gloomy.ShreddingRobot.Widget.MeinTextView
                android:id="@+id/tv_maxAirTimeTimer"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sensorReading_height"
                android:layout_marginEnd="@dimen/airTime_marginEnd"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/sensorReading_textSize" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:clipChildren="false"
        android:visibility="gone" >

        <Button
            android:id="@+id/sensorSwitchBtn"
            android:layout_width="@dimen/stopBtnWidth"
            android:layout_height="@dimen/stopBtnHeight"
            android:layout_marginBottom="@dimen/stopBtnMarginBottom"
            android:background="@drawable/roundbutton"
            android:text="@string/stop_btn_text"
            android:textAllCaps="false"
            android:textSize="50sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:clipChildren="false"
        android:orientation="horizontal"
        android:visibility="visible" >

        <com.gloomy.ShreddingRobot.Widget.MeinTextView
            android:id="@+id/repeat_btn"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="@dimen/result_btn_height"
            android:background="@color/repeat_bg"
            android:gravity="center"
            android:textSize="@dimen/result_btn_text_size"
            meinTV:fontPath="fonts/fontawesome.ttf" />

        <com.gloomy.ShreddingRobot.Widget.MeinTextView
            android:id="@+id/continue_btn"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="@dimen/result_btn_height"
            android:background="@color/continue_bg"
            android:gravity="center"
            android:textSize="@dimen/result_btn_text_size"
            meinTV:fontPath="fonts/fontawesome.ttf" />
    </LinearLayout>
</LinearLayout>